[package]
name = "xipology"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]

[[bin]]
name = "xiporw"
path = "xiporw/main.rs"

[[bin]]
name = "rendezvous"
path = "rendezvous/main.rs"

[[bin]]
name = "namederivator"
path = "namederivator/main.rs"

[lib]
name = "xipolib"
path = "lib/lib.rs"

[dependencies]
base64 = "0.7.0"
chrono = "0.4.0"
env_logger = "0.4.3"
log = "0.3.8"
rand = "0.3.16"
rayon = "0.8.2"
ring = "0.12.1"
trust-dns = { version = "0.12.0", default-features = false }
