[package]
name = "xipology"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]

[[bin]]
name = "xiporw"
path = "xiporw/main.rs"

[[bin]]
name = "rendezvous"
path = "rendezvous/main.rs"

[[bin]]
name = "namederivator"
path = "namederivator/main.rs"

[lib]
name = "xipolib"
path = "lib/lib.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
base64 = "0.9.0"
chrono = "0.4.0"
env_logger = "0.4.3"
log = "0.4.1"
rand = "0.4.1"
rayon = "0.9.0"
ring = "0.13.0-alpha"
trust-dns = { version = "0.13.0", default-features = false }
